fe daily metrics
